# pylista

./: .gitignore  README.md  pyproject.toml  setup.py
cli/: defaults.py
pylista/: cli.py  db.py  defaults.py  lists.py  models.py  task.py  utils.py
tests/: test_lists.py
