[tool.poetry]
name = "pylista"
version = "0.1.0"
description = "A simple CLI tool to manage lists"
authors = ["Herson Oliveira <oliveira.herson@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
pylista = "pylista.cli:cli"
